add (build) more rules refactor (App, Main) auto-refactored by eslint & prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "trailingComma": "es5",
   "jsxBracketSameLine": false,
   "parser": "flow",
-  "noSemi": false,
+  "semi": false,
   "rcVerbose": true
 }
