--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,15 @@
 {
-  "extends": ["react-app", "prettier"],
+  "extends": [
+    "react-app",
+    "prettier"
+  ],
   "rules": {
-    "jsx-quotes": [1, "prefer-single"]
+    "jsx-quotes": [
+      1,
+      "prefer-double"
+    ]
   },
-  "plugins": ["prettier"]
+  "plugins": [
+    "prettier"
+  ]
 }
